 (Format: Year/Month/Day)
Changes for 1.0.0:
*07/06/03:
   * Deiconify when automatically tabbing to a minimized window with focus new
     windows on, bug #1716899 (Mark)
     Window.cc FbWinFrame.cc
   * Submenus of slit menu were misbehaving with xinerama (Mark)
     Slit.cc
   * Also send transient windows when sending a window to another workspace, bug
     #1716900 (Mark)
     Screen.cc
   * Only change layer to normal when removing _NET_WM_STATE_{ABOVE,BELOW} if
     the window is actually above/below the normal layer (thanks Jim Ramsay)
     Ewmh.cc
*07/06/01:
   * Fixed infinite loop caused by removing the last workspace when it contains
     windows (Mark)
     Workspace.cc
*07/05/20:
   * Fixed bug #1717782, Bad fullscreen in ooimpress2  ( Henrik )
     mwm hint had no-resize which made resizing with 
     FluxboxWindow::setFullscreen impossible.
     Window.cc
*07/05/19:
   * Fixed bug #1718112, memory leak in FbWindow::textProperty ( Henrik )
     FbTk/FbWindow.cc
*07/05/17:
   * Fixed some window placement issues (thanks Tomas Janousek)
     ScreenPlacement.cc
*07/05/16:
   * Fixed bug with fluxbox-generate_menu -is (thanks Jim Ramsay)
     util/fluxbox-generate_menu.in
*07/05/12:
   * Changed interpretation of Horizontal/Vertical maximization of a window that
     is already maximized (Mark)
     Window.cc
   * Fixed tabs disappearing with [Deco] {TAB} and tabs in titlebar (Mark)
     Window.cc Screen.cc
*07/05/04:
   * Fixed infinite loop caused by deiconify command (Mark)
     FbCommands.cc
*07/04/24:
   * Fixed a bug in parsing cli (Mathias, thanks to Steven Kah Hien Wong <steven at
     zensaki dot com> for pointing out the issue)
     src/main.cc
*07/04/23:
   * Use asciidoc-generated manpages as the default from now on (Mathias)
   * Disabled resizing shaded windows (Mark)
     FbWinFrame.cc Window.cc
*07/04/20:
   * Fix slit.onhead with BOTTOMLEFT placement.(Thanks Tomas Janousek <tomi@nomi.cz>)
     Slit.cc
*07/04/19: